# serial-vau

./: .eslintrc-auto-import.json  .eslintrc.js  .gitignore  Cargo.toml  README.md  components.json  index.html  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.mts
.devcontainer/: devcontainer.json
src/: App.vue  auto-imports.d.ts  (+3 more)
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: app.rs  lib.rs  main.rs  serial.rs  tauri_app.rs  wmi.rs
src-tauri/src/app/: database.rs  error.rs  mod.rs  open_serial_port.rs  state.rs
src-tauri/src/app/command/: close_serial_port.rs  get_serial_ports.rs  mod.rs  open_serial_port.rs  refresh_serial_ports.rs  send_to_all_serial_ports.rs  send_to_serial_port.rs  subscribe.rs  toggle_read_state.rs
src-tauri/src/app/database/: database_service.rs  entity_app_core_model_conversion.rs  entity_impl.rs  error.rs  mod.rs
src-tauri/src/app/database/database_impl/: mod.rs  sqlite_database_service.rs
src-tauri/src/app/database/entity/: prelude.rs
src-tauri/src/app/database/model/: mod.rs
src-tauri/src/app/event/: emit_managed_serial_ports.rs  incoming_packet.rs  managed_serial_ports.rs  mod.rs  packet.rs
src-tauri/src/app/event/model/: managed_serial_ports.rs  mod.rs
src-tauri/src/app/model/: incoming_packet.rs  managed_serial_port.rs  mod.rs  open_options.rs  open_serial_port_options.rs  packet.rs  port_status.rs  read_state.rs
src-tauri/src/app/serial_state/: error.rs  handle.rs  mod.rs
src-tauri/src/app/serial_state/model/: mod.rs
src-tauri/src/app/state/: error.rs  open_serial_port.rs
src-tauri/src/core/: mod.rs  serial.rs  state.rs
src-tauri/src/core/codec/: lines_codec.rs  mod.rs
src-tauri/src/core/serial/: managed_serial_port.rs  watcher.rs
src-tauri/src/core/serial/watcher/: windows.rs
src-tauri/src/core/state/: error.rs  open_serial_port.rs
src-tauri/src/serial/: watcher.rs
src-tauri/src/serial_manager/: error.rs  mod.rs  serial_manager_service.rs
src-tauri/src/serial_manager/model/: mod.rs
src-tauri/src/serial_manager/models/: mod.rs
src-tauri/src/serial_manager/serial_manager_impl/: dummy_serial_manager.rs  mod.rs  tokio_serial_manager.rs
src-tauri/src/tauri_app/: error.rs  state.rs
src-tauri/src/tauri_app/command/: close_serial_port.rs  get_serial_ports.rs  mod.rs  open_serial_port.rs  send_to_all_serial_ports.rs  send_to_serial_port.rs  subscribe.rs  toggle_read_state.rs
src-tauri/src/tauri_app/event/: emit_error.rs  emit_managed_serial_ports.rs  emit_packet.rs  events.rs  mod.rs
src-tauri/src/tauri_app/event/model/: error.rs  managed_serial_ports.rs  mod.rs  packet.rs
src-tauri/src/tauri_app/model/: managed_serial_port.rs  open_options.rs  packet.rs
src-tauri/src/watcher/: error.rs  mod.rs  watcher_service.rs
src-tauri/src/watcher/models/: mod.rs
src-tauri/src/watcher/watcher_impl/: dummy_watcher.rs  mod.rs  wmi_watcher.rs
src-tauri/src/watcher/watcher_impl/watcher/: mod.rs  not_windows.rs  windows.rs
(+47 files in other folders)
