[package]
name = "serial-vau"
version = "0.1.0"
description = "Serial Monitor"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JadKHaddad/serial-vau"
edition = "2021"
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }

[dependencies]
enum_dispatch = "0.3.13"
auto_enums = { version = "0.8.6", features = ["futures03", "tokio1"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.0", features = [] }

tokio = { version = "1.39.2", features = ["full"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio-util = { version = "0.7.11", features = ["codec", "rt"] }
tokio-serial = "5.4.4"
futures = "0.3.0"
chrono = "0.4.38"
sea-orm = { version = "1.0.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
derive_more = { version = "0.99.18", features = ["from"] }

[target.'cfg(windows)'.dependencies]
wmi = "0.14.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
default = ["subscriptions"]
subscriptions = []
